# welkarn

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md
docs/: Doxyfile
src/: Main.cpp
src/core/: Color.cpp  Color.hpp
src/geometry/: Rectangle.cpp  Rectangle.hpp
tests/core/: ColorTest.cpp
tests/geometry/: RectangleTest.cpp
